# majestic-marketplace

./: .gitignore  CLAUDE.md  LICENSE  README.md  init-claude.sh  install.sh  mcps.json
.claude/: current_task.txt
.claude-plugin/: marketplace.json
.claude/commands/: plugin-sort-hat.md  release.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  plugin_request.yml
docs/: AGENT-AUDIT-2026-03-11.md  granularity-audit.md  skills-guide.md
docs/learnings-discovery-system/: README.md
docs/plugin-architecture/: CONFIG-SYSTEM.md  JSON-SCHEMAS.md  NAMING-CONVENTIONS.md  PLUGIN-OPERATIONS.md
docs/sop/: article-writing.md
docs/wiki/: Dev-Browser-Guide.md  interview-command.md
graveyard/: README.md
graveyard/ripgrep-search/: SKILL.md
instructions/: analyze-vs-implement.md  anti-overengineering.md  critical-thinking.md  investigation-first.md  shell-settings.sh
output-styles/: README.md  bullet-points.md  genui.md  htlm-structured.md  markdown-focused.md  table-based.md  tts-summary.md  ultra-concise.md  yaml-structured.md
plugins/majestic-agent-sdk/skills/agent-scaffold/resources/python/: pyproject.toml
plugins/majestic-browser/: README.md
plugins/majestic-company/: CHANGELOG.md  README.md
plugins/majestic-creative/: README.md
plugins/majestic-devops/: CHANGELOG.md  README.md
plugins/majestic-engineer/: CHANGELOG.md  README.md
plugins/majestic-experts/: CHANGELOG.md  README.md
plugins/majestic-founder/: CHANGELOG.md  (+1 more)
scripts/: convert-plugin.rb  install-codex.sh  install-converted-plugins.sh  install-opencode.sh
(+1003 files in other folders)
